--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -66,6 +66,9 @@
     <!-- avro version -->
     <avro.version>1.7.7</avro.version>
 
+    <!-- Brotli4j version -->
+    <brotli4j.version>1.3.2</brotli4j.version>
+
     <!-- jersey version -->
     <jersey.version>1.19</jersey.version>
 
